--- a/meta/main.yml
+++ b/meta/main.yml
@@ -48,6 +48,6 @@ galaxy_info:
     #       Maximum 20 tags per role.
 
 dependencies: 
-  - src: git+https://github.com/Morshimus/SkillFactory-B11-Project-CI-Role-INFRA
+  - src: https://github.com/Morshimus/SkillFactory-B11-Project-CI-Role-INFRA
     name: Infrastructure
 
