--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,18 @@
 ---
+- name: Install Docker for tests MOLECULE
+  include_role:
+   name: docker
+  when: molecule_yml is defined
+  
+- name: Start Docker Service MOLECULE
+  shell: /etc/init.d/docker start
+  args:
+     executable: /usr/bin/bash  
+  register: output_docker_service
+  failed_when: "'bash: /etc/init.d/docker: No such file or directory' in output_docker_service.stdout "
+  when: molecule_yml is defined 
+
+
 - name: Create root folder required  for Jenkins Docker farm
   file:
     path: "{{ Jenkins_Docker_root }}"
@@ -68,3 +82,11 @@
     name: jenkins-cluster
     enabled: true
     state: started
+  when: molecule_yml is not defined
+
+- name: Docker compose up test MOLECULE
+  shell: |
+      cd "{{ Jenkins_Docker_root }}" && docker-compose up -d
+  args:
+    executable: /bin/bash
+  when: molecule_yml is defined
